[tool.poetry]
name = "pyvjoystick"
version = "1.2.0"
description = "Python bindings for vJoy"
authors = ["fsadannn <fsadannn@gmail.com>"]
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/fsadannn/pyvjoystick"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Human Interface Device (HID)",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers"
]

[tool.poetry.dependencies]
python = ">=3.8,<4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
